<resources>
    <string name="app_name">Xaba</string>
    <string name="i_am">I\'m a</string>
    <string name="and_i_want_to">and I want to</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_u"><u>Login</u></string>
    <string name="get_an_account">Get an account</string>
    <string name="with_our_easy_process_it_only_takes_a_couple_of_minutes_to_get_onboard">With our
        easy process it only takes a couple of minutes to get onboard.
    </string>
    <string name="get_connected_and_join_the_movement_simply_click">Get connected and join the movement. Simply click</string>
    <string name="refer_friends_to_xaba_and_get_rewarded_or_become_a_xaba_agent_and_register_workers_for_extra_cash">Refer friends to Xaba and get rewarded or become a Xaba Agent, and register workers for extra cash</string>
    <string name="next">Next</string>
    <string name="refer_someone_to_get_rewards">Refer someone to get rewards</string>
    <string name="with_each_referral_you_get_extra_money_and_you_also_get_credits_for_their_actions">
        With each referral you get extra money and you also get credits for their actions.
    </string>
    <string name="title">Title</string>
    <string name="national_id">National ID</string>
    <string name="national_id_colon">National ID:&#160;</string>
    <string name="pin_code">PIN Code</string>
    <string name="pin_code_colon">PIN Code:</string>
    <string name="forgot_pin">
        <u>Forgot PIN?</u>
    </string>
    <string name="phone_number">Phone Number</string>
    <string name="send_new_pin">Send new PIN</string>
    <string name="confirm_national_id">Confirm National ID</string>
    <string name="confirm_pin_code">Confirm PIN Code</string>
    <string name="referral_code">Referral Code</string>
    <string name="activation_code">Activation Code</string>
    <string name="verify">Verify</string>
    <string name="resend_pin_sms">
        <u>Re-send PIN SMS</u>
    </string>
    <string name="verified">Verified</string>
    <string name="continuE">Continue</string>
    <string name="register_another_worker">
        <u>Register another worker</u>
    </string>
    <string name="your_referral_id_is">Your referral ID is:</string>
    <string name="add_another_profession">
        <u>Add another profession</u>
    </string>
    <string name="remove"><u>Remove</u></string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="language">Language</string>
    <string name="select_preferred_language">Select Preferred Language</string>
    <string name="county">County</string>
    <string name="sub_county">Sub-County</string>
    <string name="select_county">Select County</string>
    <string name="select_sub_county">Select Sub-County</string>
    <string name="industry">Industry</string>
    <string name="category">Category</string>
    <string name="select_industry">Select Industry</string>
    <string name="select_category">Select Category</string>
    <string name="profession">Profession</string>
    <string name="select_profession">Select Profession</string>
    <string name="welcome_to_xaba_shikanisha">Welcome to Xaba Shikanisha</string>
    <string name="register_now">
        <u>Register Now</u>
    </string>
    <string name="register_now_not_underlined">Register Now</string>
    <string name="how_to_get_an_account">How to get an account</string>
    <string name="have_you_forgot_your_pin">Have you forgot your PIN?</string>
    <string name="your_new_pin_will_be_sent_to_your_notification_number">Your new pin will be sent
        to your notification number
    </string>
    <string name="do_you_remember_it">
        <u>Do you remember it?</u>
    </string>
    <string name="building_connections">Building Connections</string>
    <string name="visit_xaba">Visit:&#160;</string>
    <string name="visit_xaba_url">www.xaba.org</string>
    <string name="pin_is_reset">Pin is reset.</string>
    <string name="need_help_with_your_pin">Need help with your PIN?</string>
    <string name="enter_your_national_id_we_will_send_a_pin_to_your_preferred_number">Enter your
        national ID. We will send a PIN to your preferred number.
    </string>
    <string name="remove_profession"><u>Remove profession</u></string>
    <string name="cancel">Cancel</string>
    <string name="payout_done">Payout Done</string>
    <string name="apply">Apply</string>
    <string name="question_title_1">What is Xaba?</string>
    <string name="question_title_2">What is Xaba Shikanisha?</string>
    <string name="question_title_3">Who can register on Xaba Shikanisha?</string>
    <string name="question_title_4">How does Xaba Shikanisha work?</string>
    <string name="question_title_5">Will I be charged for using the service?</string>
    <string name="question_title_6">How do I activate my account?</string>
    <string name="question_title_7">How do I update my details?</string>
    <string name="question_title_8">How do I view my profile?</string>
    <string name="question_title_9">How do I change my notification number?</string>
    <string name="question_title_10">How do I refer a friend?</string>
    <string name="question_title_11">How do I add a profession?</string>
    <string name="question_title_12">How do I become an agent?</string>
    <string name="question_title_13">Where can I find the Xaba Terms and Conditions?</string>
    <string name="question_title_14">What are Xaba Points?</string>
    <string name="question_title_15">How do I start earning points?</string>
    <string name="question_title_16">How does the points system work?</string>
    <string name="question_title_17">How do I redeem my Xaba Points?</string>
    <string name="question_title_18">How do I check my balance?</string>
    <string name="question_content_1">Xaba is a social movement that is enriching lives by creating job connections in Agri-business, Construction, Hospitality and Manufacturing industries. Searching and hiring workers in the informal sector is now easier on Xaba.</string>
    <string name="question_content_2">Xaba Shikanisha is an easy, cost effective and faster way to connect employers with employees. Employers are able to cherry pick blue-collar workers best suited for their projects in a matter of minutes and in simplified steps. Employees/Workers who are registered on Xaba Shikanisha through the USSD process *844# increase their opportunity of getting hired for jobs closest to them.</string>
    <string name="question_content_3">Xaba targets employees/workers and employers in the blue-collar market specializing in Agri-business, Construction, Hospitality and Manufacturing industries.
        \n \u2022 Employees/Workers can register to increase their chances of getting hired
        \n \u2022 Employers can find verified workers with the right skillset for their projects</string>
    <string name="question_content_4"><b>Employees/Workers</b> are able to register for free by dialling <b>*884#</b> and completing the registration process.  By registering, your details can be viewed by different employers increasing your chances for future job opportunities.\n\n
        <b><u>Employee/Worker Registration Steps:</u></b>\n
        a. Dial *884#\n
        b. Enter ID\n
        c. Confirm ID\n
        d. Select language\n
        e. Select industry\n
        f. Select the first letter of your profession category e.g. A-R or S-Z\n
        g. Choose specific profession\n
        h. Select county of residence\n
        i. Enter an agent ID or number of person who referred you or enter 00 to skip\n
        j. Insert your preferred number to receive job alerts.\n
        k. Receive registration confirmation SMS with your PIN\n\n
        You can also register using our Xaba Agent App. Simply download the app, click ‘register now’ on the main page and follow the steps.\n\n
        <b><u>Employer Registration Steps</u></b>\n
        a. Register on www.xaba.org\n
        b. Create an account by filling in the Company Registration Form\n
        c. Activate your account by clicking link sent to your e-mail address\n
        d. Log-in to your account\n
        e. Access the dashboard and add new projects/review reports\n
        f. Start shortlisting workers\n
        g. Send notification to shortlisted workers\n
        h. Send job details to workers who’ve responded\n
        i. Invite them for job interview\n
        j. Hire selected workers</string>
    <string name="question_content_5">a. Registration and receiving notifications on Xaba Shikanisha is free for workers\nb. Normal network charges apply.</string>
    <string name="question_content_6"><b>a. On the App:</b>\n i. Simply put the activation code sent to your notification number and click ‘verify’ to proceed.</string>
    <string name="question_content_7"><b>a. On USSD:</b>\n i. Dial *884#\n
        ii. Enter ID\n
        iii. Confirm ID\n
        iv. Enter PIN\n
        v. Select (1) Update Profile (for either PIN, Location, Language)\n
        <b>b. On the App:</b>\n
        i. Login to your account.\n
        ii. Click the Menu icon\n
        iii. Select My Profile\n
        iv. Click Edit Profile</string>
    <string name="question_content_8"><b>a. On USSD:</b>\n
        i. Dial *884#\n
        ii. Enter ID\n
        iii. Confirm ID\n
        iv. Enter PIN\n
        v. Choose (2) View Profile on the menu</string>
    <string name="question_content_9"><b>a. On USSD:</b>\n
        i. Dial *884#\n
        ii. Enter ID\n
        iii. Confirm ID\n
        iv. Enter PIN\n
        v. Choose (3) Change Notification Number on the menu</string>
    <string name="question_content_10"><b>a. On USSD:</b>\n
        i. Dial *884#\n
        ii. Enter ID\n
        iii. Confirm ID\n
        iv. Enter PIN\n
        v. Choose (4) Refer a Friend on the menu</string>
    <string name="question_content_11"><b>a. On USSD:</b>\n
        i. Dial *884#\n
        ii. Enter ID\n
        iii. Confirm ID\n
        iv. Enter PIN\n
        v. Choose (5) Add Profession on the menu</string>
    <string name="question_content_12">a. Download the Xaba Agent App on the Google Play Store or Apple App Store\n
        b. Register as an Agent\n
        c. Choose Become Agent on menu\n
        d. Enter your details and submit\n
        e. If successful, receive a notification to become an agent\n
        f. Start earning your commission.</string>
    <string name="question_content_13">You can find the terms and conditions on our website, www.xaba.org.</string>
    <string name="question_content_14">Xaba Points is a loyalty programme for all Xaba Agents. Each Xaba point is equivalent to KSH 5 upon reaching your target number of registrations.</string>
    <string name="question_content_15">Once you are registered as an agent, you are automatically included into the loyalty programme and can start earning points. The more workers you register, the more you earn.</string>
    <string name="question_content_16">For every worker registered, you will earn five Xaba Points. Once you have registered 5000 workers, you will be able to redeem your points.</string>
    <string name="question_content_17">Xaba loyalty points are redeemable after every 5000 workers registered. As soon as the target is reached, your points will be converted into cash and sent to you via mpesa.</string>
    <string name="question_content_18">The green bar on your dashboard illustrated your total balance. You will also be able to view your cumulative balance in your commission logs and statements.</string>
    <string name="filters">Filters</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="last_week">Last Week</string>
    <string name="last_30_days">Last 30 Days</string>
</resources>