<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/contact_gray"
        android:orientation="vertical"
        android:padding="20dp">

        <FrameLayout
            android:id="@+id/grp_title_1"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_1"/>

            <ImageView
                android:id="@+id/img_1"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_1"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_1"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_2"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_2"/>

            <ImageView
                android:id="@+id/img_2"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_2"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_2"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_3"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_3"/>

            <ImageView
                android:id="@+id/img_3"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_3"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_3"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_4"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_4"/>

            <ImageView
                android:id="@+id/img_4"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_4"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_4"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_5"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_5"/>

            <ImageView
                android:id="@+id/img_5"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_5"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_5"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_6"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_6"/>

            <ImageView
                android:id="@+id/img_6"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_6"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_6"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_7"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_7"/>

            <ImageView
                android:id="@+id/img_7"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_7"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_7"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_8"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_8"/>

            <ImageView
                android:id="@+id/img_8"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_8"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_8"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_9"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_9"/>

            <ImageView
                android:id="@+id/img_9"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_9"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_9"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_10"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_10"/>

            <ImageView
                android:id="@+id/img_10"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_10"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_10"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_11"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_11"/>

            <ImageView
                android:id="@+id/img_11"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_11"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_11"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_12"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_12"/>

            <ImageView
                android:id="@+id/img_12"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_12"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_12"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_13"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_13"/>

            <ImageView
                android:id="@+id/img_13"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_13"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_13"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_14"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_14"/>

            <ImageView
                android:id="@+id/img_14"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_14"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_14"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_15"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_15"/>

            <ImageView
                android:id="@+id/img_15"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_15"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_15"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_16"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_16"/>

            <ImageView
                android:id="@+id/img_16"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_16"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_16"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_17"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_17"/>

            <ImageView
                android:id="@+id/img_17"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_17"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_17"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/grp_title_18"
            style="@style/ExpandableTitleLayoutStyle">

            <TextView
                style="@style/ExpandableTitleTextStyle"
                android:text="@string/question_title_18"/>

            <ImageView
                android:id="@+id/img_18"
                style="@style/ExpandableTitleImageStyle"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grp_18"
            style="@style/ExpandableContentLayoutStyle">

            <TextView
                style="@style/ExpandableContentTextStyle"
                android:text="@string/question_content_18"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>