<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingEnd="30dp"
    android:paddingStart="30dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/xaba_red_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/national_id"
        style="@style/EditText"
        android:layout_marginTop="20dp"
        android:hint="@string/national_id"/>

    <EditText
        android:id="@+id/pin_code"
        style="@style/EditText"
        android:layout_marginTop="20dp"
        android:hint="@string/pin_code"/>

    <Button
        android:id="@+id/log_in"
        style="@style/ButtonGreen"
        android:layout_marginTop="30dp"
        android:text="@string/log_in"/>

    <Button
        android:id="@+id/forgot_pin"
        style="@style/ButtonLink"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_pin"/>

</LinearLayout>